--- a/index.html
+++ b/index.html
@@ -46,14 +46,7 @@
 										<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Project Details</a></li>
 										<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
 									</ul>
-								</li> 
-								<li class="nav-item submenu dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-										<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-									</ul>
-								</li> 
+								</li>
 								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 							</ul>
 						</div> 
@@ -78,7 +71,7 @@
 								<h5>This is me</h5>
 								<h2>Md. Jahidul Islam</h2>
 								<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
-								<a class="banner_btn" href="#">Discover Now</a>
+								<a class="banner_btn" href="#">Download CV</a>
 							</div>
 						</div>
 					</div>
@@ -339,61 +332,6 @@
         	</div>
         </section>
         <!--================End Testimonials Area =================-->
-        
-        <!--================Latest Blog Area =================-->
-        <section class="latest_blog_area p_120">
-        	<div class="container">
-        		<div class="main_title">
-        			<h2>Latest Posts from Blog</h2>
-        			<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
-        		</div>
-        		<div class="row latest_blog_inner">
-        			<div class="col-lg-4">
-        				<div class="l_blog_item">
-        					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/blog/home-blog/home-blog-1.jpg" alt="">
-        					</div>
-        					<div class="l_blog_text">
-        						<div class="date">
-        							<a href="#">25 October, 2017  |  By Mark Wiens</a>
-        						</div>
-        						<a href="#"><h4>Addiction When Gambling Becomes A Problem</h4></a>
-        						<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in front of their desktops, while delivery people scan bar codes with handhelds and workers in the field stay</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-4">
-        				<div class="l_blog_item">
-        					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/blog/home-blog/home-blog-2.jpg" alt="">
-        					</div>
-        					<div class="l_blog_text">
-        						<div class="date">
-        							<a href="#">25 October, 2017  |  By Mark Wiens</a>
-        						</div>
-        						<a href="#"><h4>Make Myspace Your Best Designed Space</h4></a>
-        						<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in front of their desktops, while delivery people scan bar codes with handhelds and workers in the field stay</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-4">
-        				<div class="l_blog_item">
-        					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/blog/home-blog/home-blog-3.jpg" alt="">
-        					</div>
-        					<div class="l_blog_text">
-        						<div class="date">
-        							<a href="#">25 October, 2017  |  By Mark Wiens</a>
-        						</div>
-        						<a href="#"><h4>Video Games Playing With Imagination</h4></a>
-        						<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in front of their desktops, while delivery people scan bar codes with handhelds and workers in the field stay</p>
-        					</div>
-        				</div>
-        			</div>
-        		</div>
-        	</div>
-        </section>
-        <!--================End Latest Blog Area =================-->
         
         <!--================Footer Area =================-->
         <footer class="footer_area p_120">
