--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 
-								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
+								<li class="nav-item"><a class="nav-link" href="About-Me">About</a></li> 
 								<li class="nav-item"><a class="nav-link" href="services.html">Services</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
@@ -84,7 +84,7 @@
         <section class="welcome_area p_120">
         	<div class="container">
         		<div class="row welcome_inner">
-        			<div class="col-lg-6">
+        			<div class="col-lg-6" id = "About-Me">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
         					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
