--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         				</aside>
         			</div>
         			
-        			<div class="col-lg-3">
+        			<div class="col-lg-3 right">
         				<aside class="f_widget social_widget">
         					<div class="f_title">
         						<h3>Follow Me</h3>
