--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 right">
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.785241974302!2d90.3466432661042!3d23.79066066317784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9cb8a002d35%3A0xf36071651f4f6585!2sPrime%20University!5e0!3m2!1sen!2sbd!4v1567862011460!5m2!1sen!2sbd" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
