--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 							<div class="banner_content">
 								<h3>Hello, I'm</h3>
 								<h2>Md. Jahidul Islam</h2>
-								<h5>Lecturer, Department of Computer Science & Engineering</h5>
-								<h5><a href="https://www.primeuniversity.edu.bd" target="_blank" style="text-decoration: none; color: black;">Prime University</a></h5>
-								<a class="banner_btn" href="https://drive.google.com/open?id=1-sAOwkfZo1rQ-FO6xsqwc6Gbl5Bx9FA2" target="_blank">Download CV</a>
+								<h5>Lecturer, Department Engineering</h5>
+								<h5><a href="http://buft.edu.bd/" target="_blank" style="text-decoration: none; color: black;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
+								<a class="banner_btn" href="https://drive.google.com/open?id=1AXZlkn1xlxvfyEDL7EsATH_8Aec2D3cp" target="_blank">Download CV</a>
 							</div>
 						</div>
 					</div>
@@ -187,16 +187,52 @@
 						<li data-filter=".education"><a href="#">Education</a></li>
 					</ul>
 				</div>
+				<div class="col-lg-3 col-md-6 experiences">
+        				<div class="feature_item">
+        					<i class="flaticon-briefcase"></i>
+        					<h4>Lecturer</h4>
+							<small><p style="color: black;"><b style="color: black;">Engineering</b></p>
+							<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
+							<p style="color: black;"><b style="color: black;">Duration:</b> Mar, 2020 to Present</p>
+							<p><br><br><br><br></p>
+							<a class="banner_btn" href="http://buft.edu.bd/" target="_blank">Discover More</a></small>
+        				</div>
+        			</div>
         		<div class="projects_inner row">
 					<div class="col-lg-3 col-md-6 experiences">
         				<div class="feature_item">
         					<i class="flaticon-briefcase"></i>
-        					<h4>Lecturer</h4>
+        					<h4>Former Lecturer</h4>
 							<small><p style="color: black;"><b style="color: black;">Computer Science & Engineering</b></p>
 							<p style="color: black;"><b style="color: black;">Prime University</b></p>
-							<p style="color: black;"><b style="color: black;">Duration:</b> Feb, 2019 to Present</p>
+							<p style="color: black;"><b style="color: black;">Duration:</b> Feb, 2019 to Mar, 2020</p>
 							<p><br><br><br><br></p>
 							<a class="banner_btn" href="https://www.primeuniversity.edu.bd" target="_blank">Discover More</a></small>
+        				</div>
+        			</div>
+					<div class="col-lg-3 col-md-6 experiences">
+        				<div class="feature_item">
+        					<i class="flaticon-briefcase"></i>
+        					<h4>Former Lecturer (Adjunct)</h4>
+							<small><p style="color: black;"><b style="color: black;">Engineering</b></p>
+							<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
+							<p style="color: black;"><b style="color: black;">Duration:</b> Sep, 2019 to Jan, 2020</p>
+							<p><br><br><br><br></p>
+							<a class="banner_btn" href="http://buft.edu.bd/" target="_blank">Discover More</a></small>
+        				</div>
+        			</div>
+					<div class="col-lg-3 col-md-6 education">
+        				<div class="feature_item">
+        					<i class="flaticon-professor"></i>
+        					<h4>M.Sc.</h4>
+							<small><p style="color: black;"><b style="color: black;">Jahangirnagar University</b></p>
+							<p></p>
+							<p style="color: black;"><b style="color: black;"></b>Computer Science</p>
+							<p style="color: black;"><b style="color: black;">CGPA:</b> N/A</p>
+							<p style="color: black;"><b style="color: black;">Position:</b> N/A</p>
+							<p style="color: black;"><b style="color: black;">Passing Year:</b> Ongoing<p>
+							<p><br></p>
+							<a class="banner_btn" href="https://juniv.edu/" target="_blank">Discover More</a></small>
         				</div>
         			</div>
         			<div class="col-lg-3 col-md-6 education">
@@ -298,11 +334,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6 thesis research">
+					<div class="col-lg-4 col-sm-6 thesis research publications">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
 							<div class="projects_text">
-								<a href="#" target="_blank"><h4>Paitient Cohort Identification</h4></a>
+								<a href="#" target="_blank"><h4>Improving Patient Cohort Identification</h4></a>
 								<p>Undergrade Thesis</p>
 							</div>
 						</div>
@@ -461,6 +497,97 @@
         					</div>
         				</div>
         			</div>
+					<div class="col-lg-3">
+        				<div class="l_blog_item">
+        					<div class="l_blog_img">
+        						<img class="img-fluid" src="img/courses/course-d.jpg" alt="">
+        					</div>
+        					<div class="l_blog_text">
+        						<div class="date">
+        							<a href="#" target="_blank">Fall 2019</a>
+        						</div>
+        						<a href="#" target="_blank"><h4>Data Structure</h4></a>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-3">
+        				<div class="l_blog_item">
+        					<div class="l_blog_img">
+        						<img class="img-fluid" src="img/courses/course-d.jpg" alt="">
+        					</div>
+        					<div class="l_blog_text">
+        						<div class="date">
+        							<a href="#" target="_blank">Fall 2019, Spring 2020</a>
+        						</div>
+        						<a href="#" target="_blank"><h4>Object Oriented Programming (C++)</h4></a>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-3">
+        				<div class="l_blog_item">
+        					<div class="l_blog_img">
+        						<img class="img-fluid" src="img/courses/course-d.jpg" alt="">
+        					</div>
+        					<div class="l_blog_text">
+        						<div class="date">
+        							<a href="#" target="_blank">Spring 2020</a>
+        						</div>
+        						<a href="#" target="_blank"><h4>Computer Fundementals</h4></a>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-3">
+        				<div class="l_blog_item">
+        					<div class="l_blog_img">
+        						<img class="img-fluid" src="img/courses/course-d.jpg" alt="">
+        					</div>
+        					<div class="l_blog_text">
+        						<div class="date">
+        							<a href="#" target="_blank">Fall 2019, Spring 2020</a>
+        						</div>
+        						<a href="#" target="_blank"><h4>Introduction to Programming and Data Structure</h4></a>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-3">
+        				<div class="l_blog_item">
+        					<div class="l_blog_img">
+        						<img class="img-fluid" src="img/courses/course-d.jpg" alt="">
+        					</div>
+        					<div class="l_blog_text">
+        						<div class="date">
+        							<a href="#" target="_blank">Spring 2020</a>
+        						</div>
+        						<a href="#" target="_blank"><h4>Introduction to Programming Techniques</h4></a>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-3">
+        				<div class="l_blog_item">
+        					<div class="l_blog_img">
+        						<img class="img-fluid" src="img/courses/course-d.jpg" alt="">
+        					</div>
+        					<div class="l_blog_text">
+        						<div class="date">
+        							<a href="#" target="_blank">Fall 2019, Spring 2020</a>
+        						</div>
+        						<a href="#" target="_blank"><h4>Introduction to Electrical Engineering and Electronics</h4></a>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-3">
+        				<div class="l_blog_item">
+        					<div class="l_blog_img">
+        						<img class="img-fluid" src="img/courses/course-d.jpg" alt="">
+        					</div>
+        					<div class="l_blog_text">
+        						<div class="date">
+        							<a href="#" target="_blank">Spring 2020</a>
+        						</div>
+        						<a href="#" target="_blank"><h4>Computer Application in Business</h4></a>
+        					</div>
+        				</div>
+        			</div>
         		</div>
         	</div>
         </section>
@@ -471,7 +598,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>My Team</h2>
-        			<p>Following peoples are research with me.</p>
+        			<p>Following peoples are working with me.</p>
         		</div>
         		<div class="row latest_blog_inner" style="text-align: center;">
         			<div class="col-lg-4">
@@ -621,7 +748,7 @@
                             <div class="info_item">
                                 <i class="lnr lnr-home"></i>
                                 <h6>Dhaka, Bangladesh</h6>
-                                <p>21 E/A, 1st Colony, Mazar Road</p>
+                                <p>21 A/E, 1st Colony, Mazar Road, Mirpur - 1</p>
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-phone-handset"></i>
@@ -631,7 +758,7 @@
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>
                                 <h6><a href="#">jahid.jabed@gmail.com</a></h6>
-                                <h6><a href="#">jahid.jabed@primeuniversity.edu.bd</a></h6>
+                                <h6><a href="#">jahidul.islam@buft.edu.bd</a></h6>
                                 <p>Send me your query anytime!</p>
                             </div>
                         </div>
