--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<div class="banner_content">
 								<h3>Hello, I'm</h3>
 								<h2>Md. Jahidul Islam</h2>
-								<h5>Lecturer, Department Engineering</h5>
+								<h5>Lecturer, Department of Engineering</h5>
 								<h5><a href="http://buft.edu.bd/" target="_blank" style="text-decoration: none; color: black;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
 								<a class="banner_btn" href="https://drive.google.com/open?id=1AXZlkn1xlxvfyEDL7EsATH_8Aec2D3cp" target="_blank">Download CV</a>
 							</div>
