--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<h2>Md. Jahidul Islam</h2>
 								<h5>Lecturer, Department of Engineering</h5>
 								<h5><a href="http://buft.edu.bd/" target="_blank" style="text-decoration: none; color: black;">BGMEA University of Fashion and Technology (BUFT)</a></h5>
-								<a class="banner_btn" href="https://drive.google.com/open?id=1AXZlkn1xlxvfyEDL7EsATH_8Aec2D3cp" target="_blank">Download CV</a>
+								<!--a class="banner_btn" href="https://drive.google.com/open?id=1AXZlkn1xlxvfyEDL7EsATH_8Aec2D3cp" target="_blank">Download CV</a-->
 							</div>
 						</div>
 					</div>
@@ -108,7 +108,7 @@
         						<div class="col-md-4">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-code"></i></li>
-        								<li><h4>1</h4></li>
+        								<li><h4>4</h4></li>
         								<li data-filter=".projects">
 											<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">Undergrade<br>Projects</a>
 										</li>
@@ -117,7 +117,7 @@
         						<div class="col-md-4">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-book"></i></li>
-        								<li><h4>1</h4></li>
+        								<li><h4>2</h4></li>
         								<li data-filter=".publications">
 											<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">Total<br>Publications</a>
 										</li>
@@ -766,7 +766,7 @@
                     </div>
 					
 					<div class="col-lg-6 col-sm-12">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.785241974302!2d90.3466432661042!3d23.79066066317784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9cb8a002d35%3A0xf36071651f4f6585!2sPrime%20University!5e0!3m2!1sen!2sbd!4v1567862011460!5m2!1sen!2sbd" width="500" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							<iframe src="https://www.google.com/maps/place/BGMEA+University+of+Fashion+%26+Technology+(BUFT)/@23.8866262,90.3617898,16.46z/data=!4m5!3m4!1s0x3755c393782983bb:0x497bb1b7c3630bd0!8m2!3d23.8846777!4d90.3612855" width="500" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
