--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="col-lg-6">
 							<div class="home_left_img">
 							<!--div class="banner_content"-->
-								<img src="img/banner/Md Jahidul Islam - PP.png" alt="">
+								<img src="img/banner/Md Jahidul Islam - PP.png" style="width: 50%" alt="">
 								
 							</div>
 						</div>
