--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="col-lg-6">
 							<div class="home_left_img">
 							<!--div class="banner_content"-->
-								<img src="img/banner/Md Jahidul Islam - RB.png" alt="">
+								<img src="img/banner/Md Jahidul Islam - RR.png" alt="">
 								
 							</div>
 						</div>
@@ -222,6 +222,20 @@
 							<a class="banner_btn" href="http://buft.edu.bd/" target="_blank">Discover More</a></small>
         				</div>
         			</div>
+				<div class="col-lg-3 col-md-6 education">
+        				<div class="feature_item">
+        					<i class="flaticon-professor"></i>
+        					<h4>M.Sc.</h4>
+							<small><p style="color: black;"><b style="color: black;">Bangladesh University of Engineering and Technology</b></p>
+							<p></p>
+							<p style="color: black;"><b style="color: black;"></b>Computer Science and Engineering</p>
+							<p style="color: black;"><b style="color: black;">CGPA:</b> N/A</p>
+							<p style="color: black;"><b style="color: black;">Position:</b> N/A</p>
+							<p style="color: black;"><b style="color: black;">Passing Year:</b> Ongoing<p>
+							<p><br></p>
+							<a class="banner_btn" href="https://www.buet.ac.bd/" target="_blank">Discover More</a></small>
+        				</div>
+        			</div>
 					<div class="col-lg-3 col-md-6 education">
         				<div class="feature_item">
         					<i class="flaticon-professor"></i>
@@ -229,9 +243,9 @@
 							<small><p style="color: black;"><b style="color: black;">Jahangirnagar University</b></p>
 							<p></p>
 							<p style="color: black;"><b style="color: black;"></b>Computer Science</p>
-							<p style="color: black;"><b style="color: black;">CGPA:</b> N/A</p>
-							<p style="color: black;"><b style="color: black;">Position:</b> N/A</p>
-							<p style="color: black;"><b style="color: black;">Passing Year:</b> Ongoing<p>
+							<p style="color: black;"><b style="color: black;">CGPA:</b> 3.95</p>
+							<p style="color: black;"><b style="color: black;">Position:</b> 1st</p>
+							<p style="color: black;"><b style="color: black;">Passing Year:</b> 2020<p>
 							<p><br></p>
 							<a class="banner_btn" href="https://juniv.edu/" target="_blank">Discover More</a></small>
         				</div>
