--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 								<li class="nav-item submenu dropdown">
 									<a href="#Works" onclick="location.href='#Works';" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Works</a>
 									<ul class="dropdown-menu filter">
+										<li class="nav-item" data-filter=".graduate_thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Graduate Thesis</a></li>
 										<li class="nav-item" data-filter=".thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrade Thesis</a></li>
 										<li class="nav-item" data-filter=".projects"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrade Projects</a></li>
 										<li class="nav-item" data-filter=".publications"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Publications</a></li>
@@ -305,6 +306,7 @@
         		<div class="projects_fillter">
 					<ul class="filter list">
 						<li class="active" data-filter="*"><a href="#">All Categories</a></li>
+						<li data-filter=".graduate_thesis"><a href="#">Graduate Thesis</a></li>
 						<li data-filter=".projects"><a href="#">Undergrade Projects</a></li>
 						<li data-filter=".other_projects"><a href="#">Others Projects</a></li>
 						<li data-filter=".thesis"><a href="#">Undergrade Thesis</a></li>
@@ -312,6 +314,15 @@
 						<li data-filter=".research"><a href="#">Research Works</a></li>
 					</ul>
 				</div>
+					<div class="col-lg-4 col-sm-6 thesis research publications graduate_thesis">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
+							<div class="projects_text">
+								<a href="#" target="_blank"><h4>Study on CNN based Transfer Learning in Image Classification</h4></a>
+								<p>Graduate Thesis</p>
+							</div>
+						</div>
+					</div>
 				<div class="projects_inner row">
 					<div class="col-lg-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
