--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 							<a class="banner_btn" href="http://buft.edu.bd/" target="_blank">Discover More</a></small>
         				</div>
         			</div>
-					<div class="col-lg-3 col-md-6 experiences">
+					<div class="col-lg-3 col-md-6 experiences" style="height: 150px">
         				<div class="feature_item">
         					<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer</h4>
@@ -316,7 +316,7 @@
 				</div>
 					
 				<div class="projects_inner row">
-					<div class="col-lg-4 col-sm-6 thesis research publications graduate_thesis">
+					<div class="col-lg-4 col-sm-6 research graduate_thesis">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
 							<div class="projects_text">
