--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         					<h4>About Myself</h4>
         					<p style="text-align: justify">I was born in a small village in <a href="#" style="text-decoration: none; color: black;">Cumilla</a> (A renown city of <a href="#" style="text-decoration: none; color: black;">Bangladesh</a>). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from <a href="#" style="text-decoration: none; color: black;">Rajshahi University of Engineering & Technology (RUET)</a> - a reputed university in my country.</p>
 							<div class="row projects-filter" style="text-align: center;">
-							<div class="col-md-4">
+							<div class="col-md-3">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
@@ -106,7 +106,7 @@
 										</li>
         							</ul>
         						</div>
-        						<div class="col-md-4">
+        						<div class="col-md-3">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
@@ -115,7 +115,7 @@
 										</li>
         							</ul>
         						</div>
-        						<div class="col-md-4">
+        						<div class="col-md-3">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-code"></i></li>
         								<li><h4>4</h4></li>
@@ -124,7 +124,7 @@
 										</li>
         							</ul>
         						</div>
-        						<div class="col-md-4">
+        						<div class="col-md-3">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-book"></i></li>
         								<li><h4>2</h4></li>
@@ -802,7 +802,7 @@
                     </div>
 					
 			<div class="col-lg-6 col-sm-12">
-				<div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=BGMEA%20University+(BGMEA%20University%20of%20Engineering%20and%20Technology)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe></div>
+				<div class="contact_info"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=BGMEA%20University+(BGMEA%20University%20of%20Engineering%20and%20Technology)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe></div>
 			</div>
                 </div>
             </div>
