--- a/index.html
+++ b/index.html
@@ -92,90 +92,105 @@
         <section class="welcome_area p_120" id="About">
         	<div class="container">
         		<div class="row welcome_inner">
-        			<div class="col-lg-8">
+        			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
         					<p style="text-align: justify">I was born in a small village in <a href="#" style="text-decoration: none; color: black;">Cumilla</a> (A renown city of <a href="#" style="text-decoration: none; color: black;">Bangladesh</a>). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from <a href="#" style="text-decoration: none; color: black;">Rajshahi University of Engineering & Technology (RUET)</a> - a reputed university in my country.</p>
 							<div class="row projects-filter" style="text-align: center;">
-							<div class="col-md-3">
+							<div class="col-md-6">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
         								<li data-filter=".graduate_thesis">
-											<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">Graduate<br>Thesis</a>
-										</li>
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">
+											Graduate<br>Thesis
+										</a>
+									</li>
         							</ul>
         						</div>
-        						<div class="col-md-3">
+        						<div class="col-md-6">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-graduation-hat"></i></li>
         								<li><h4>1</h4></li>
         								<li data-filter=".thesis">
-											<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">Undergrade<br>Thesis</a>
-										</li>
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">
+											Undergrade<br>Thesis
+										</a>
+									</li>
         							</ul>
         						</div>
-        						<div class="col-md-3">
+        						<div class="col-md-6">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-code"></i></li>
         								<li><h4>4</h4></li>
         								<li data-filter=".projects">
-											<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">Undergrade<br>Projects</a>
-										</li>
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">
+											Undergrade<br>Projects
+										</a>
+									</li>
         							</ul>
         						</div>
-        						<div class="col-md-3">
+        						<div class="col-md-6">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-book"></i></li>
         								<li><h4>2</h4></li>
         								<li data-filter=".publications">
-											<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">Total<br>Publications</a>
-										</li>
+										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none;">
+											Total<br>Publications
+										</a>
+									</li>
         							</ul>
         						</div>
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4">
+        			<div class="col-lg-6">
         				<div class="tools_expert">
         					<h3><br><br>Tools Expertness</h3>
         					<div class="skill_main">
-								<div class="skill_item">
-									<h4 class="text-left"><b style="color: black;">Development Skills:</b> Web and Android Software Development 
-									(<span class="counter" style="color: black;">55</span>%).</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4 class="text-left"><b style="color: black;">Programming Languages:</b> C, C++, Java, Python, PHP, R 
-									(<span class="counter" style="color: black;">60</span>%).</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4 class="text-left"><b style="color: black;">Scripting Languages:</b> JavaScript, Angular JS, Python, PHP, MATLAB 
-									(<span class="counter" style="color: black;">40</span>%).</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4 class="text-left"><b style="color: black;">Tools/Frameworks:</b> NetBeans, Eclipse, Android-Studio, Laravel 
-									(<span class="counter" style="color: black;">75</span>%).</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4 class="text-left"><b style="color: black;">Others:</b> Socket Programming, CISCO Networking 
-									(<span class="counter" style="color: black;">30</span>%).</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b style="color: black;">Teaching Skills:</b> Teaching and Academic Responsibilities 
+								(<span class="counter" style="color: black;">3</span>)Years+.</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b style="color: black;">Development Skills:</b> Web and Android Software Development 
+								(<span class="counter" style="color: black;">55</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b style="color: black;">Programming Languages:</b> C, C++, Java, Python, PHP, R 
+								(<span class="counter" style="color: black;">60</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b style="color: black;">Scripting Languages:</b> JavaScript, Angular JS, Python, PHP, MATLAB 
+								(<span class="counter" style="color: black;">40</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b style="color: black;">Tools/Frameworks:</b> NetBeans, Eclipse, Android-Studio, Laravel 
+								(<span class="counter" style="color: black;">75</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b style="color: black;">Others:</b> Socket Programming, CISCO Networking 
+								(<span class="counter" style="color: black;">30</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+						</div>
         				</div>
         			</div>
         		</div>
