--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 						<p style="color: black;"><b style="color: black;"></b>Computer Science</p>
 						<p style="color: black;"><b style="color: black;">CGPA:</b> 3.95</p>
 						<p style="color: black;"><b style="color: black;">Position:</b> 1st</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2020<p
+						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2020<p>
         				</div>
         				<div class="feature_item">
         					<h4>B.Sc. Engg.</h4>
