--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         					<h4>Former Lecturer (Adjunct)</h4>
 						<small><p style="color: black;"><b style="color: black;">Engineering</b></p>
 						<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
-						<p style="color: black;"><b style="color: black;">Duration:</b> Sep, 2019 to Jan, 2020</p
+						<p style="color: black;"><b style="color: black;">Duration:</b> Sep, 2019 to Jan, 2020</p>
         				</div>
         			</div>
 					
@@ -246,7 +246,7 @@
 						<p style="color: black;"><b style="color: black;"></b>Computer Science and Engineering</p>
 						<p style="color: black;"><b style="color: black;">CGPA:</b> N/A</p>
 						<p style="color: black;"><b style="color: black;">Position:</b> N/A</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> Ongoing<p>
+						<p style="color: black;"><b style="color: black;">Passing Year:</b> Ongoing</p>
         				</div>
         				<div class="feature_item">
         					<h4>M.Sc.</h4>
@@ -255,7 +255,7 @@
 						<p style="color: black;"><b style="color: black;"></b>Computer Science</p>
 						<p style="color: black;"><b style="color: black;">CGPA:</b> 3.95</p>
 						<p style="color: black;"><b style="color: black;">Position:</b> 1st</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2020<p>
+						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2020</p>
         				</div>
         				<div class="feature_item">
         					<h4>B.Sc. Engg.</h4>
@@ -264,7 +264,7 @@
 						<p style="color: black;"><b style="color: black;"></b>Computer Science & Engineering</p>
 						<p style="color: black;"><b style="color: black;">CGPA:</b> 3.79 out of 4.00</p>
 						<p style="color: black;"><b style="color: black;">Position:</b> 8th out of 106</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2018<p>
+						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2018</p>
         				</div>
         				<div class="feature_item">
         					<h4>HSC</h4>
@@ -272,7 +272,7 @@
 						<p></p>
 						<p style="color: black;"><b style="color: black;">Group:</b> Science</p>
 						<p style="color: black;"><b style="color: black;">GPA:</b> 5.00 out of 5.00</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2013<p>
+						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2013</p>
 
         				</div>
         				<div class="feature_item">
@@ -281,7 +281,7 @@
 						<p></p>
 						<p style="color: black;"><b style="color: black;">Group:</b> Science</p>
 						<p style="color: black;"><b style="color: black;">GPA:</b> 5.00 out of 5.00</p>
-						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2011<p>
+						<p style="color: black;"><b style="color: black;">Passing Year:</b> 2011</p>
         				</div>
         			</div>
         		</div>
