--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 								<h4 class="text-left"><b style="color: black;">Teaching Skills:</b> Teaching and Academic Responsibilities 
 								(<span class="counter" style="color: black;" id="exp_year"></span> Years +).</h4>
 								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100"></div>
+									<div class="progress-bar" role="progressbar" aria-valuenow=calculateExp("12/02/2019") aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
@@ -832,7 +832,7 @@
 		  const exp = Math.floor(diff / (1000 * 60 * 60 * 24 * 365)); 
 		  return exp
 		}
-		let exp_year = calculateAge(date);
+		let exp_year = calculateExp(date);
   		document.getElementById('exp_year').innerHTML = ""+exp_year;
 	</script>
         <script src="js/jquery-3.2.1.min.js"></script>
