--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 		  const exp = Math.floor(diff / (1000 * 60 * 60 * 24 * 365)); 
 		  return exp
 		}
-		let exp_year = calculateExp(date);
+		let exp_year = calculateExp("12-Feb-2019");
   		document.getElementById('exp_year').innerHTML = ""+exp_year;
 	</script>
         <script src="js/jquery-3.2.1.min.js"></script>
