--- a/index.html
+++ b/index.html
@@ -219,19 +219,19 @@
         				<div class="feature_item">
         					<i class="flaticon-briefcase"></i>
         					<h4>Lecturer</h4>
-						<small><p style="color: black;"><b style="color: black;">Engineering</b></p>
+						<p style="color: black;"><b style="color: black;">Engineering</b></p>
 						<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p style="color: black;"><b style="color: black;">Duration:</b> Mar, 2020 to Present</p>
 					</div>
         				<div class="feature_item">
         					<h4>Former Lecturer</h4>
-						<small><p style="color: black;"><b style="color: black;">Computer Science & Engineering</b></p>
+						<p style="color: black;"><b style="color: black;">Computer Science & Engineering</b></p>
 						<p style="color: black;"><b style="color: black;">Prime University</b></p>
 						<p style="color: black;"><b style="color: black;">Duration:</b> Feb, 2019 to Mar, 2020</p>
         				</div>
         				<div class="feature_item">
         					<h4>Former Lecturer (Adjunct)</h4>
-						<small><p style="color: black;"><b style="color: black;">Engineering</b></p>
+						<p style="color: black;"><b style="color: black;">Engineering</b></p>
 						<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
 						<p style="color: black;"><b style="color: black;">Duration:</b> Sep, 2019 to Jan, 2020</p>
         				</div>
@@ -242,7 +242,7 @@
         				<div class="feature_item">
         					<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
-						<small><p style="color: black;"><b style="color: black;">Bangladesh University of Engineering and Technology</b></p>
+						<p style="color: black;"><b style="color: black;">Bangladesh University of Engineering and Technology</b></p>
 						<p></p>
 						<p style="color: black;"><b style="color: black;"></b>Computer Science and Engineering</p>
 						<p style="color: black;"><b style="color: black;">CGPA:</b> N/A</p>
@@ -251,7 +251,7 @@
         				</div>
         				<div class="feature_item">
         					<h4>M.Sc.</h4>
-						<small><p style="color: black;"><b style="color: black;">Jahangirnagar University</b></p>
+						<p style="color: black;"><b style="color: black;">Jahangirnagar University</b></p>
 						<p></p>
 						<p style="color: black;"><b style="color: black;"></b>Computer Science</p>
 						<p style="color: black;"><b style="color: black;">CGPA:</b> 3.95</p>
@@ -260,7 +260,7 @@
         				</div>
         				<div class="feature_item">
         					<h4>B.Sc. Engg.</h4>
-						<small><p style="color: black;"><b style="color: black;">Rajshahi University of Engineering & Technology</b></p>
+						<p style="color: black;"><b style="color: black;">Rajshahi University of Engineering & Technology</b></p>
 						<p></p>
 						<p style="color: black;"><b style="color: black;"></b>Computer Science & Engineering</p>
 						<p style="color: black;"><b style="color: black;">CGPA:</b> 3.79 out of 4.00</p>
@@ -269,7 +269,7 @@
         				</div>
         				<div class="feature_item">
         					<h4>HSC</h4>
-						<small><p style="color: black;"><b style="color: black;">Ispahani Public School & College</b></p>
+						<p style="color: black;"><b style="color: black;">Ispahani Public School & College</b></p>
 						<p></p>
 						<p style="color: black;"><b style="color: black;">Group:</b> Science</p>
 						<p style="color: black;"><b style="color: black;">GPA:</b> 5.00 out of 5.00</p>
@@ -278,7 +278,7 @@
         				</div>
         				<div class="feature_item">
         					<h4>SSC</h4>
-						<small><p style="color: black;"><b style="color: black;">Gongamondal Raj Institution</b></p>
+						<p style="color: black;"><b style="color: black;">Gongamondal Raj Institution</b></p>
 						<p></p>
 						<p style="color: black;"><b style="color: black;">Group:</b> Science</p>
 						<p style="color: black;"><b style="color: black;">GPA:</b> 5.00 out of 5.00</p>
