--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 experiences">
         				<div class="feature_item">
+						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer</h4>
 						<p style="color: black;"><b style="color: black;">Computer Science & Engineering</b></p>
 						<p style="color: black;"><b style="color: black;">Prime University</b></p>
@@ -234,6 +235,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 experiences">
         				<div class="feature_item">
+						<i class="flaticon-briefcase"></i>
         					<h4>Former Lecturer (Adjunct)</h4>
 						<p style="color: black;"><b style="color: black;">Engineering</b></p>
 						<p style="color: black;"><b style="color: black;">BGMEA University of Fashion and Technology (BUFT)</b></p>
@@ -254,6 +256,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
+						<i class="flaticon-professor"></i>
         					<h4>M.Sc.</h4>
 						<p style="color: black;"><b style="color: black;">Jahangirnagar University</b></p>
 						<p></p>
@@ -265,6 +268,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
+						<i class="flaticon-professor"></i>
         					<h4>B.Sc. Engg.</h4>
 						<p style="color: black;"><b style="color: black;">Rajshahi University of Engineering & Technology</b></p>
 						<p></p>
@@ -276,7 +280,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
-        					<h4>HSC</h4>
+						<i class="flaticon-school"
 						<p style="color: black;"><b style="color: black;">Ispahani Public School & College</b></p>
 						<p></p>
 						<p style="color: black;"><b style="color: black;">Group:</b> Science</p>
@@ -287,6 +291,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 education">
         				<div class="feature_item">
+						<i class="flaticon-student"></i>
         					<h4>SSC</h4>
 						<p style="color: black;"><b style="color: black;">Gongamondal Raj Institution</b></p>
 						<p></p>
