--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <section class="home_banner_area">
             <div class="banner_inner">
 			<div class="container">
-				<!--div class="row home_left_img"></div-->
+				<div class="row home_left_img"></div>
+				<div class="row home_left_img"></div>
 				<div class="row justify-content-center">
 					<div class="col-lg-6">
 						<div class="home_left_img">
