--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
         					<div class="skill_main">
 							<div class="skill_item">
 								<h4 class="text-left"><b style="color: black;">Teaching Skills:</b> Teaching and Academic Responsibilities 
-								(<span class="counter" style="color: black;" id="exp_year"></span> Years +).</h4>
+								(<span class="counter" style="color: black;" id="exp_year">3</span> Years +).</h4>
 								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow=calculateExp("Tue Mar 12 2019") aria-valuemin="0" aria-valuemax="100"></div>
+									<div class="progress-bar" role="progressbar" aria-valuenow=33 aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
@@ -797,7 +797,7 @@
                 </div>
 		<div class="col-lg-8 col-md-8 col-sm-12">
 			<div class="contact_info">
-				<iframe width="50%" height="110" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=BGMEA%20University+(BGMEA%20University%20of%20Engineering%20and%20Technology)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
+				<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=BGMEA%20University+(BGMEA%20University%20of%20Engineering%20and%20Technology)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">gps smartwatches</a></iframe>
 			</div>
 		</div>
                 </div>
