--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 						</div>
 					</div>
 				</div>
+				<div class="row home_left_img"></div>
 			</div>
             </div>
         </section>
