--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         					<div class="skill_main">
 							<div class="skill_item">
 								<h4 class="text-left"><b style="color: black;">Teaching Skills:</b> Teaching and Academic Responsibilities 
-								(<span class="counter" style="color: black;" id="exp_year">3</span> Years +).</h4>
+								(<span class="counter" style="color: black;">3</span> Years +).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow=33 aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
