--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="css/responsive.css">
     </head>
     <body>
+	<button onclick="dayNightToggle()">Toggle dark mode</button>
         
         <!--================Header Menu Area =================-->
         <header class="header_area" id="Home">
