--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container box_1620">
 				<!-- Brand and toggle get grouped for better mobile display -->
-				<button onclick="dayNightToggle()" style="align: right;">Toggle dark mode</button>
+				
 				<a class="navbar-brand logo_h" href="index.html">MD. JAHIDUL ISLAM</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="icon-bar"></span>
@@ -52,6 +52,7 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="#Contact" onclick="location.href='#Contact';">Contact</a></li>
+						<li class="nav-item"><button onclick="dayNightToggle()" style="align: right;">Toggle dark mode</button><li>
 					</ul>
 				</div> 
 			</div>
